Criação: Branch update / cadastro.html

--- a/cadastro.html
+++ b/cadastro.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro PlayFlix</title>
+    <title>PlayFlix</title>
 </head>
 <body>
     <header style="background-color: red;">
@@ -11,13 +11,9 @@
     </header>
 
     <div>
-        E-mail <input type="text"> <br>
-        Senha <input type="text"><br>
-        <button>Entrar</button><br>
-        Não Possui Cadstro, clique e se cadastre?<br>
-        <button>Cadastrar</button>
-        
+       Digite seu E-mail <input type="text"> <br>
+       Escolha sua Senha <input type="text"><br>
+        <button>Cadaste</button>
     </div>
-    
 </body>
 </html>
