--- a/cadastro.html
+++ b/cadastro.html
@@ -1,19 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlayFlix</title>
+    <title>Cadastre-se</title>
 </head>
 <body>
     <header style="background-color: red;">
         <img src="./imagens_layout/logo.png" alt="Logo PlayFlix" >   
     </header>
 
-    <div>
-       Digite seu E-mail <input type="text"> <br>
-       Escolha sua Senha <input type="text"><br>
-        <button>Cadaste</button>
-    </div>
+    <main>
+        <form>
+            <div>
+                <label for="nomeCompleto">Nome Completo: </label>
+                <input type="text" id="nomeCompleto">
+            </div>
+
+            <div>
+                <label for="emailFornecido">E-mail:</label>
+                <input type="email" id="emailFornecido">
+            </div>
+
+            <div>
+                <label for="cpfFornecido">CPF: </label>
+                <input type="inteiro" id="cpfFornecido">
+            </div>
+
+            <div>
+                <label for="numeroTelefone">Telefone: </label>
+                <input type="tel" id="numeroTelefone">
+            </div>
+
+            <div>
+                <label for="dataNascimento">Data de Nascimento:</label>
+                <input type="date" id="dataNascimento">
+            </div>
+
+            <div>
+                <label for="senha">Crie uma senha: </label>
+                <input type="password" id="senha">
+            </div>
+
+            <div>
+                <input type="submit" value="Cadastre-se">
+            </div>
+        </form>
+    </main>
+
+    <footer>
+        <h5>
+            Para Mais informações, entre em contato: <br>
+
+            Telefone: 0800 3540 2020 <br>
+            E-mail: sac@playflix.com.br
+        </h5>
+    </footer>
 </body>
 </html>
