criado perfil.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro PlayFlix</title>
+    <title>PlayFlix</title>
 </head>
 <body>
     <header style="background-color: red;">
@@ -32,5 +32,13 @@
         </form>
     </main>
     
+    <footer>
+        <h5>
+            Para Mais informações, entre em contato: <br>
+
+            Telefone: 0800 3540 2020 <br>
+            E-mail: sac@playflix.com.br
+        </h5>
+    </footer>
 </body>
 </html>
