Criado filme.html

--- a/cadastro.html
+++ b/cadastro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastre-se</title>
+    
 </head>
 <body>
     <header style="background-color: red;">
@@ -43,7 +44,7 @@
             </div>
 
             <div>
-                <input type="submit" value="Cadastre-se">
+                <button><a href="./index.html">Cadastre-se</a></button> 
             </div>
         </form>
     </main>
