--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div>
-                <button>Entrar</button>
+                <button style=" text-decoration: none;"><a href="./perfil.html">Entrar</a></button>
                 <h4>
                     Ainda não possui cadastro? <a href="./cadastro.html">Clique e Assine agora.</a>
                 </h4>
