--- a/perfil.html
+++ b/perfil.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
+    
 </head>
 <body>
     <div>
         <h1>Quem irá assistir? </h1>
         <div>
             <div>
-                <img src="./imagens_layout/Noob.jpg" alt="Perfil 1" style="display: flex; margin: auto; max-width: 30%; height: auto;">
+                <a href="./filme.html"><img src="./imagens_layout/Noob.jpg" alt="Perfil 1" style="display: flex; margin: auto; max-width: 30%; height: auto;" ></a>
                 <h5 style="text-align: center;">Perfil 1</h5>
             </div>
 
@@ -19,7 +20,7 @@
                 <h5 style="text-align: center;">Perfil 2</h5>
             </div>
 
-            <button style="display: flex; margin: auto; max-width: 30%; height: auto;"> Gerenciar Perfis</button>
+            <button style="display: flex; margin: auto; max-width: 30%; height: auto;"> Gerenciar Perfis </button> 
         </div>
     </div>
     
