Adicionado imagens_filmes / ajustado index.html

--- a/filmes.html
+++ b/filmes.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css_filmes/style.css">
-    <title>Document</title>
+    <title>Filmes</title>
 </head>
 <body>
     <header>
-        <img src="./" alt="logo">
+        <img src="./imagens_layout/logo.png" alt="logo">
     </header>
 
     <div>
-        <img src="./imagens_layout/Imagens_filmes/séries.png" width="19%">
-        <img src="./imagens_layout/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="Imagens/comédia.png" width="19%">
-        <img src="Imagens/drama.png" width="19%">
-        <img src="Imagens/ficção_policial.png" width="19%">
+        <img src="./Imagens_filmes/séries.png" width="19%">
+        <img src="./Imagens_filmes/ação_aventura.png" width="19%">
+        <img src="./Imagens_filmes/comédia.png" width="19%">
+        <img src="./Imagens_filmes/drama.png" width="19%">
+        <img src="./Imagens_filmes/ficção_policial.png" width="19%">
     </div>
 
     <div>
-        <img src="Imagens/em_alta.png" width="19%">
-        <img src="Imagens/romance.png" width="19%">
-        <img src="Imagens/Terror.png" width="19%">
-        <img src="Imagens/filme_musical.png" width="19%">
-        <img src="Imagens/suspense.png" width="19%">
+        <img src="./Imagens_filmes/em_alta.png" width="19%">
+        <img src="./Imagens_filmes/romance.png" width="19%">
+        <img src="./Imagens_filmes/Terror.png" width="19%">
+        <img src="./Imagens_filmes/filme_musical.png" width="19%">
+        <img src="./Imagens_filmes/suspense.png" width="19%">
     </div>
    
 
