--- a/perfil.html
+++ b/perfil.html
@@ -11,7 +11,7 @@
         <h1>Quem irá assistir? </h1>
         <div>
             <div>
-                <a href="./filme.html"><img src="./imagens_layout/Noob.jpg" alt="Perfil 1" style="display: flex; margin: auto; max-width: 30%; height: auto;" ></a>
+                <a href="./filmes.html"><img src="./imagens_layout/Noob.jpg" alt="Perfil 1" style="display: flex; margin: auto; max-width: 30%; height: auto;" ></a>
                 <h5 style="text-align: center;">Perfil 1</h5>
             </div>
 
