--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>PlayFlix</title>
 </head>
 <body>
-    <header>
-        <img src="Imagens/logo.jpg" alt="logo">
+    <header style="background-color: red;">
+        <img src="./imagens_layout/logo.png" alt="Logo PlayFlix" >   
     </header>
 
-    <div>
-        <img src="Imagens/séries.png" width="19%">
-        <img src="Imagens/ação_aventura.png" width="19%">
-        <img src="Imagens/comédia.png" width="19%">
-        <img src="Imagens/drama.png" width="19%">
-        <img src="Imagens/ficção_policial.png" width="19%">
-    </div>
+    <main>
+        <form>
+            <div>
+                <label for="emailCadastrado">E-mail:</label>
+                <input type="email" id="emailCadastrado">
+            </div>
 
             <div>
                 <label for="senha">Senha:</label>
@@ -34,5 +32,13 @@
         </form>
     </main>
     
+    <footer>
+        <h5>
+            Para Mais informações, entre em contato: <br>
+
+            Telefone: 0800 3540 2020 <br>
+            E-mail: sac@playflix.com.br
+        </h5>
+    </footer>
 </body>
 </html>
