--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PlayFlix</title>
 </head>
 <body>
-    <header style="background-color: red;">
+    <header style="background-color: #ff0000;">
         <img src="./imagens_layout/logo.png" alt="Logo PlayFlix" >   
     </header>
 
@@ -14,12 +14,12 @@
         <form>
             <div>
                 <label for="emailCadastrado">E-mail:</label>
-                <input type="email" id="emailCadastrado">
+                <input type="email" id="emailCadastrado"  placeholder="Digite seu email">
             </div>
 
             <div>
                 <label for="senha">Senha:</label>
-                <input type="password">
+                <input type="password" placeholder="Digite suan senha">
             </div>
 
             <div>
@@ -42,3 +42,8 @@
     </footer>
 </body>
 </html>
+
+<!---alterado input de login e senha, para mostrar ao usuario um exemplo, alterado toda a tela de perfil, criado css para perfil, adicionado fundo de tela em perfil 
+-->
+
+
