padronização das pastas css e img , o projeto inteiro quebrou devido a alteraçao de diretorios, sera corrigido no proximo commit

--- a/cadastro.html
+++ b/cadastro.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/css_index/css_index.css">
     <title>Cadastre-se</title>
     
 </head>
 <body>
     <header style="background-color: red;">
-        <img src="./imagens_layout/logo.png" alt="Logo PlayFlix" >   
+        <img src="./imagens/imagens_layout/logo.png" alt="Logo PlayFlix" >   
     </header>
 
     <main>
@@ -49,7 +50,7 @@
         </form>
     </main>
 
-    <footer>
+    <footer class="rodape">
         <h5>
             Para Mais informações, entre em contato: <br>
 
