realizado merge das alterações realizadas no css de perfil e html, realizado a correção de todas as paginas que quebraram devido a padronização, incluido para pagina de produtos.html no botao cadastre-se da pagina de cadastro.html

--- a/cadastro.html
+++ b/cadastro.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/css_index/css_index.css">
+    <link rel="stylesheet" href="./css/cadastro.css">
     <title>Cadastre-se</title>
     
 </head>
 <body>
     <header style="background-color: red;">
-        <img src="./imagens/imagens_layout/logo.png" alt="Logo PlayFlix" >   
+        <img src="./imagens/layout/logo.png" alt="Logo PlayFlix" >   
     </header>
 
     <main>
@@ -45,7 +45,7 @@
             </div>
 
             <div>
-                <button><a href="./index.html">Cadastre-se</a></button> 
+                <button><a href="./produtos.html">Cadastre-se</a></button> 
             </div>
         </form>
     </main>
