--- a/filmes.html
+++ b/filmes.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/css_filmes/style.css">
+    <link rel="stylesheet" href="./css/filmes.css">
     <title>Filmes</title>
 </head>
 <body>
     <header>
-        <img src="./imagens/imagens_layout/logo.png" alt="logo">
+        <img src="./imagens/layout/logo.png" alt="logo">
     </header>
 
     <div>
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
     </div>
 
     <div>
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
-        <img src="./imagens/Imagens_filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
+        <img src="./imagens/filmes/ação_aventura.png" width="19%">
     </div>
    
 
