--- a/login.html
+++ b/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css_index/css_index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>PlayFlix</title>
 </head>
 <body>
 
     <div class="cabecalho">
      <header class="menu-header">
-        <img src="./imagens_layout/logo.png" alt="Logo PlayFlix" >   
+        <img src="./imagens/layout/logo.png" alt="Logo PlayFlix" >   
         
     </header>
     <div class="botao_cabecalho">
