Criado index.css

--- a/produtos.html
+++ b/produtos.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="html,css,javascript">
     <link rel="stylesheet" href="rodape.css">
     <title>Playflix</title>
-    <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="./css_produtos/produtos.css">
     <link rel="icon" type="imagem" href="imagem/logo.png" />
 </head>
 
