Criado cadastro.css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div id="lembra">
-                <label for="lembrar">Lembra de mim</label>
+                <label for="lembrar">Lembrar-se de mim</label>
                 <input type="checkbox" name="lembrarUsuario" id="lembra">
             </div>
 
