--- a/cadastro.html
+++ b/cadastro.html
@@ -3,44 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css_cadastro/cadastro.css">
     <title>Cadastre-se</title>
     
 </head>
 <body>
-    <header style="background-color: red;">
+    <header>
         <img src="./imagens_layout/logo.png" alt="Logo PlayFlix" >   
     </header>
 
     <main>
-        <form>
+        <form id="formulario">
             <div>
-                <label for="nomeCompleto">Nome Completo: </label>
-                <input type="text" id="nomeCompleto">
+                <label for="nomeCompleto">Nome:</label>
+                <input type="text" id="nomeCompleto" placeholder="Informe seu Nome Completo"> 
             </div>
 
             <div>
                 <label for="emailFornecido">E-mail:</label>
-                <input type="email" id="emailFornecido">
+                <input type="email" id="emailFornecido" placeholder="Informe seu E-mail">  
             </div>
 
             <div>
                 <label for="cpfFornecido">CPF: </label>
-                <input type="inteiro" id="cpfFornecido">
+                <input type="inteiro" id="cpfFornecido" placeholder="Informe seu CPF">
             </div>
 
             <div>
                 <label for="numeroTelefone">Telefone: </label>
-                <input type="tel" id="numeroTelefone">
+                <input type="tel" id="numeroTelefone" placeholder="Informe seu Número de Telefone">
             </div>
 
             <div>
                 <label for="dataNascimento">Data de Nascimento:</label>
-                <input type="date" id="dataNascimento">
+                <input type="date" id="dataNascimento" placeholder="Informe a Data do seu Nascimento">
             </div>
 
             <div>
                 <label for="senha">Crie uma senha: </label>
-                <input type="password" id="senha">
+                <input type="password" id="senha" placeholder="Crie uma Senha">
             </div>
 
             <div>
