Modificado login.html, cadastro html / index.css, cadastro.css, perfil.css

--- a/login.html
+++ b/login.html
@@ -27,6 +27,8 @@
                     <input type="email" id="emailCadastrado"  placeholder="Digite seu email">
                     <label for="senha">Senha:</label>
                     <input type="password" placeholder="Digite suan senha">
+                    <input type="checkbox" name="lembrarUsuario" id="lembra"> Lembrar-se de mim <br>
+                    
                     <button><a href="./perfil.html">Entrar</a></button>
                     <h4>
                         Ainda não possui cadastro? <a href="./cadastro.html">Clique e Assine agora.</a>
