ajustei a filmes.html , editar perfil

--- a/cadastro.html
+++ b/cadastro.html
@@ -43,7 +43,7 @@
                     <label for="senha">Crie uma senha: </label>
                     <input type="password" id="senha" placeholder="Crie uma senha"> <br>
 
-                    <button><a href="./produtos.html">Cadastre-se</a></button> 
+                    <button><a href="./login.html">Cadastre-se</a></button> 
                     
                 </div>
             </form>
