ajustado todos os arquivos css , adicionado novo logo, adicionado css para nova fonte

--- a/filmes.html
+++ b/filmes.html
@@ -18,20 +18,22 @@
     </header>
     </div>
 
-    <div>
-        <img src="./imagens/filmes/em_alta.png" class="reveal-img" data-hover="./imagens/filmes/generico.png" width="19%" >
-        <img src="./imagens/filmes/comédia.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
-        <img src="./imagens/filmes/drama.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
-        <img src="./imagens/filmes/ficção_policial.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
-        <img src="./imagens/filmes/romance.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
+    <div class="filmes">
+        <img src="./imagens/filmes/em_alta.png" class="reveal-img" data-hover="./imagens/filmes/generico.png" width="16%" >
+        <img src="./imagens/filmes/comédia.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
+        <img src="./imagens/filmes/drama.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
+        <img src="./imagens/filmes/ficção_policial.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
+        <img src="./imagens/filmes/romance.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
+        <img src="./imagens/filmes/romance.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
     </div>
 
-    <div>
-        <img src="./imagens/filmes/ação_aventura.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
-        <img src="./imagens/filmes/filme_musical.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
-        <img src="./imagens/filmes/suspense.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
-        <img src="./imagens/filmes/séries.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
-        <img src="./imagens/filmes/Terror.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="19%" >
+    <div class="filmes">
+        <img src="./imagens/filmes/ação_aventura.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
+        <img src="./imagens/filmes/filme_musical.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
+        <img src="./imagens/filmes/suspense.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
+        <img src="./imagens/filmes/séries.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
+        <img src="./imagens/filmes/Terror.png" class="reveal-img" data-hover="./imagens/filmes/generico.png" width="16%" >
+        <img src="./imagens/filmes/romance.png" class="reveal-img" data-hover="./imagens/filmes/generico.png"  width="16%" >
     </div>
    
 
