new-logo acrescentada nas imagens

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="cabecalho">
      <header class="menu-header">
-        <img src="./imagens/layout/logo.png" alt="Logo PlayFlix" >   
+        <img src="./imagens/layout/new-logo.png" alt="Logo PlayFlix" >   
         
     </header>
     <div class="botao_cabecalho">
