--- a/senha.html
+++ b/senha.html
@@ -43,12 +43,15 @@
    
 
     <footer class="rodape">
-        <h5>
-            Para Mais informações, entre em contato: <br>
+        <div class="rodape-texto">
+            <hr class="hr-footer">
+                <h5>
+                    Para Mais informações, entre em contato: <br>
 
-            Telefone: 0800 3540 2020 <br>
-            E-mail: sac@playflix.com.br
-        </h5>
+                    Telefone: 0800 3540 2020 <br>
+                    E-mail: sac@playflix.com.br
+                </h5>
+        </div>
     </footer>
 </body>
 </html>
