--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="menu">
      <nav class="navbar">
         <div class="navbar-container">
-                <a href="#" class="navbar-logo">
-                    <img src="/imagens/layout/logo.png" alt="Logo">
+                <a href="./index.html" class="navbar-logo">
+                    <img src="./imagens/layout/logo.png" alt="Logo">
                 </a>
                 <ul class="navbar-menu">
                     
-                    <li class="navbar-item"><a href="/login.html" class="navbar-link">Entrar</a></li>
-                    <li class="navbar-item"><a href="/cadastro.html" class="navbar-link">cadastre-se</a></li>
+                    <li class="navbar-item"><a href="./login.html" class="navbar-link">Entrar</a></li>
+                    <li class="navbar-item"><a href="./cadastro.html" class="navbar-link">cadastre-se</a></li>
                     
                 </ul>
             </div>
