--- a/senha.html
+++ b/senha.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="#" class="navbar-logo">
+            <a href="./index.html" class="navbar-logo">
                 <img src="/imagens/layout/logo.png" alt="Logo">
             </a>
             <ul class="navbar-menu">
