--- a/editar_perfil.html
+++ b/editar_perfil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/cadastro.css">
+    <link rel="icon" href="./imagens/favicon_io/filme.png">
     <title>Editar Perfil</title>
     
 </head>
