--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/login.css">
+    <link rel="icon" href="./imagens/favicon_io/filme.png">
     <title>PlayFlix</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
                     </h4>
 
                     <h5>Não lembra da sua senha? 
-                        <a href="/senha.html">Clique aqui para recuperar</a>
+                        <a href="./senha.html">Clique aqui para recuperar</a>
                     </h5>
                 
                     
