--- a/senha.html
+++ b/senha.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/senha.css">
+    <link rel="icon" href="./imagens/favicon_io/filme.png">
     <title>Recuperar senha
 
     </title>
