foram corrigidos todos os footers, corrigidos erros gramaticais, adicionado validações nos formularios de cadastro,editar perfil e login, adicionado botao de sair na pagina de perfil

--- a/login.html
+++ b/login.html
@@ -51,14 +51,14 @@
       </form>
 
 
-   <footer class="rodape">
+      <footer class="rodape">
         <div class="rodape-texto">
             <hr class="hr-footer">
                 <h5>
-                    Para Mais informações, entre em contato: <br>
+                    Para Mais informações, entre em contato:
 
-                    Telefone: 0800 3540 2020 <br>
-                    E-mail: sac@playflix.com.br
+                    Telefone: 0800 3540 2020 | 
+                    E-mail: sac@playflix.com.br | &copy;PlayFlix
                 </h5>
         </div>
     </footer>
