Segunda alteração de páginas e links

--- a/perfil.html
+++ b/perfil.html
@@ -20,7 +20,7 @@
 
                 
                     <div class="perfil">
-                            <a href="./filmes.html"><img src="./imagens/perfil/boy-cap.jpg" alt="Perfil 1" class="imagem_perfil"></a>
+                            <a href="./maratona.html"><img src="./imagens/perfil/boy-cap.jpg" alt="Perfil 1" class="imagem_perfil"></a>
                         
                             <img src="./imagens/perfil/angry-girl.jpg" alt="Perfil 2" class="imagem_perfil" >
                             <img src="./imagens/perfil/girl.jpg" alt="Perfil 2" class="imagem_perfil" >
