--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="rodape.css">
     <title>Playflix</title>
     <link rel="stylesheet" href="./css/produtos.css">
-    <link rel="icon" type="imagem" href="/projeto_integrador/imagens/produtos/filme.png" />
+    <link rel="icon" href="./imagens/favicon_io/filme.png">
+   
    
 </head>
 
@@ -23,10 +24,10 @@
                        <ul class="navbar-menu">
                            
                            
-                           <li class="navbar-item"><a href="./em-contrucao.html" class="navbar-link">Animes</a></li>
-                           <li class="navbar-item"><a href="./em-contrucao.html" class="navbar-link">Series</a></li>
-                           <li class="navbar-item"><a href="./em-contrucao.html" class="navbar-link">Filmes</a></li>
-                           <li class="navbar-item"><a href="./filmes.html" class="navbar-link">Voltar</a></li>
+                           <li class="navbar-item"><a href="./animes.html" class="navbar-link">Animes</a></li>
+                           <li class="navbar-item"><a href="./filmes.html" class="navbar-link">Filmes</a></li>
+                           <li class="navbar-item"><a href="./series.html" class="navbar-link">Series</a></li>
+                           <li class="navbar-item"><a href="./maratona.html" class="navbar-link">Maratona</a></li>
                            <li class="navbar-item"><a href="./index.html" class="navbar-link">Sair</a></li> 
 
 
