--- a/series.html
+++ b/series.html
@@ -23,7 +23,7 @@
                            <li class="navbar-item"><a href="./produtos.html" class="navbar-link">Em alta</a></li>
                            <li class="navbar-item"><a href="./maratona.html" class="navbar-link">Maratona</a></li>
                            <li class="navbar-item"><a href="./animes.html" class="navbar-link">Animes</a></li>
-                           <li class="navbar-item"><a href="./series.html" class="navbar-link">Series</a></li>
+                           <li class="navbar-item"><a href="./filmes.html" class="navbar-link">Filmes</a></li>
                            <li class="navbar-item"><a href="./index.html" class="navbar-link">Sair</a></li> 
 
 
@@ -34,7 +34,7 @@
 
  <div class="pai-corrosel">
     <div class="titulo-carrosel">
-   <hr class="hr-left"> <p class="text-hr">Filmes</p> <hr class="hr-right">
+   <hr class="hr-left"> <p class="text-hr">Series</p> <hr class="hr-right">
     </div>
   </div>
 
