adicionado imagens as paginas: filmes, animes, series, criado css para efeito de scale e borda, criado select para assinaturas na pagina de cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -57,6 +57,14 @@
                     <input type="password" id="senha" placeholder="Crie uma senha" class="input-class"> 
                     <p id="senha-helper" class="helper-text"></p> <br>
 
+                    <span>Selecione o tipo de conta:</span>
+                    <select name="conta" id="conta-cadastro"> 
+                        
+                        <option value="tipo de conta"></option>
+                        <option value="mensal"> Mensal</option>
+                        <option value="on-demand"> On Demand</option>
+                    </select> <br>
+
                     <button id="botao-cadastrar" type="submit">Cadastre-se</button> 
                 </div>   
             </div>
