--- a/animes.html
+++ b/animes.html
@@ -47,21 +47,21 @@
               
              <!-------Mantive a mesma classe do carousel para ficar pradonizado-------->
             <div class="filmes">
-            <img src="./imagens/filmes/a-menina-e-o-dragao.jpg"  >
-            <img src="./imagens/filmes/adao-negro.jpg"   >
-            <img src="./imagens/filmes/avatar2.jpg"   >
-            <img src="./imagens/filmes/boneco-do-mal.jpg"  >
-            <img src="./imagens/filmes/c_marvel.jpg"    >
-            <img src="./imagens/filmes/capa-dune-part-two.jpg"  >
-             <img src="./imagens/filmes/culpa_das_estrelas.jpg"   >
-            <img src="./imagens/filmes/Harry-Potter-Relíquias-Parte 2.jpg" >
-            <img src="./imagens/filmes/terrifier.jpg"   >
-            <img src="./imagens/filmes/starwars.jpg"    >
-            <img src="./imagens/filmes/Spider-Man_No_Way_Home_poster.jpg"  >
-            <img src="./imagens/filmes/O_hobbit.jpg"  >
-            <img src="./imagens/filmes/starwars.jpg"   >
-            <img src="./imagens/filmes/Spider-Man_No_Way_Home_poster.jpg"  >
-            <img src="./imagens/filmes/O_hobbit.jpg"   >
+            <img src="./imagens/animes/boku.jpg"  >
+            <img src="./imagens/animes/Jujutsu-kaisen-divulgação.jpg"   >
+            <img src="./imagens/animes/promisse.jpg"   >
+            <img src="./imagens/animes/download (1).jfif"  >
+            <img src="./imagens/animes/download (2).jfif ">
+            <img src="./imagens/animes/download.jfif"  >
+             <img src="./imagens/animes/nanatsu.jfif"   >
+            <img src="./imagens/animes/one pièce.jfif"  >
+            <img src="./imagens/animes/Pokémon.jfif"   >
+            <img src="./imagens/animes/shaman.jfif"    >
+            <img src="./imagens/animes/Tower of God.jfif"  >
+            <img src="./imagens/animes/tokyoghoul.jfif"  >
+            <img src="./imagens/animes/Devilman Crybaby.jfif"   >
+            <img src="./imagens/animes/Tokyo Revengers Promocional Poster.jfif"  >
+            <img src="./imagens/animes/evangelion.jfif"   >
               
         </div>
         </div>
