--- a/series.html
+++ b/series.html
@@ -47,21 +47,21 @@
               
              <!-------Mantive a mesma classe do carousel para ficar pradonizado-------->
             <div class="filmes">
-            <img src="./imagens/filmes/a-menina-e-o-dragao.jpg"  >
-            <img src="./imagens/filmes/adao-negro.jpg"   >
-            <img src="./imagens/filmes/avatar2.jpg"   >
-            <img src="./imagens/filmes/boneco-do-mal.jpg"  >
-            <img src="./imagens/filmes/c_marvel.jpg"    >
-            <img src="./imagens/filmes/capa-dune-part-two.jpg"  >
-             <img src="./imagens/filmes/culpa_das_estrelas.jpg"   >
-            <img src="./imagens/filmes/Harry-Potter-Relíquias-Parte 2.jpg" >
-            <img src="./imagens/filmes/terrifier.jpg"   >
-            <img src="./imagens/filmes/starwars.jpg"    >
-            <img src="./imagens/filmes/Spider-Man_No_Way_Home_poster.jpg"  >
-            <img src="./imagens/filmes/O_hobbit.jpg"  >
-            <img src="./imagens/filmes/starwars.jpg"   >
-            <img src="./imagens/filmes/Spider-Man_No_Way_Home_poster.jpg"  >
-            <img src="./imagens/filmes/O_hobbit.jpg"   >
+            <img src="./imagens/series/American Horror Story.jfif"  >
+            <img src="./imagens/series/beleza_verdadeira.jfif"   >
+            <img src="./imagens/series/breakingbad.jfif"   >
+            <img src="./imagens/series/Desgraça ao seu dispor - dorama.jfif"  >
+            <img src="./imagens/series/download (1).jfif"    >
+            <img src="./imagens/series/download (2).jfif"  >
+             <img src="./imagens/series/download (3).jfif"   >
+            <img src="./imagens/series/download.jfif" >
+            <img src="./imagens/series/My Demon K-drama Official Poster Netflix.jfif"   >
+            <img src="./imagens/series/Póster _Lucifer_.jfif"    >
+            <img src="./imagens/series/rainha_das_lagrimas.jfif"  >
+            <img src="./imagens/series/Series poster.jfif"  >
+            <img src="./imagens/series/the_untamed.jfif"   >
+            <img src="./imagens/series/TITANS (Season 1).jfif"  >
+            <img src="./imagens/series/West World Poster, Cesar Jaffar.jfif"   >
               
         </div>
         </div>
