adicionado a todos os css responsividade para telas menores que 768px

--- a/senha.html
+++ b/senha.html
@@ -36,7 +36,8 @@
 
                    <label for="emailCadastrado" >Email</label>
                     <input type="email" placeholder="Digite seu E-mail"> <br>
-                    <button id="continuar">Continuar</button>
+                    <br>
+                    <a href="login.html" class="envia"> Enviar </a>
                 </div>
             </form>
         </main>
