foram ajustadas algumas imagens

--- a/animes.html
+++ b/animes.html
@@ -47,9 +47,9 @@
               
              <!-------Mantive a mesma classe do carousel para ficar pradonizado-------->
             <div class="filmes">
-            <img src="./imagens/animes/boku.jpg"  >
-            <img src="./imagens/animes/Jujutsu-kaisen-divulgação.jpg"   >
-            <img src="./imagens/animes/promisse.jpg"   >
+            <img src="./imagens/animes/boku.jfif"  >
+            <img src="./imagens/animes/Jujutsu-kaisen-divulgação.jfif"   >
+            <img src="./imagens/animes/promisse.jfif"   >
             <img src="./imagens/animes/download (1).jfif"  >
             <img src="./imagens/animes/download (2).jfif ">
             <img src="./imagens/animes/download.jfif"  >
