--- a/filmes.html
+++ b/filmes.html
@@ -49,12 +49,12 @@
             <div class="filmes">
             <img src="./imagens/filmes/a-menina-e-o-dragao.jpg"  >
             <img src="./imagens/filmes/adao-negro.jpg"   >
-            <img src="./imagens/filmes/avatar2.jpg"   >
+            <img src="./imagens/filmes/avatar2.jfif"   >
             <img src="./imagens/filmes/boneco-do-mal.jpg"  >
             <img src="./imagens/filmes/c_marvel.jpg"    >
             <img src="./imagens/filmes/capa-dune-part-two.jpg"  >
-             <img src="./imagens/filmes/culpa_das_estrelas.jpg"   >
-            <img src="./imagens/filmes/Harry-Potter-Relíquias-Parte 2.jpg" >
+             <img src="./imagens/filmes/culpa_das_estrelas.jfif"   >
+            <img src="./imagens/filmes/Harry-Potter-Relíquias-Parte 2.jfif" >
             <img src="./imagens/filmes/terrifier.jpg"   >
             <img src="./imagens/filmes/starwars.jpg"    >
             <img src="./imagens/filmes/Spider-Man_No_Way_Home_poster.jpg"  >
