ajustado logo da tela de senha e editar perfil

--- a/editar_perfil.html
+++ b/editar_perfil.html
@@ -14,7 +14,7 @@
      <nav class="navbar">
         <div class="navbar-container">
                 <a href="./index.html" class="navbar-logo">
-                    <img src="/imagens/layout/logo.png" alt="Logo">
+                    <img src="./imagens/layout/logo.png" alt="Logo">
                 </a>
                 <ul class="navbar-menu">
                     
