--- a/maratona.html
+++ b/maratona.html
@@ -41,21 +41,21 @@
 
     </header>
     <div class="filmes">
-        <img src="./imagens/filmes-html/em_alta.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png" width="16%" >
-        <img src="./imagens/filmes-html/comédia.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
-        <img src="./imagens/filmes-html/drama.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
-        <img src="./imagens/filmes-html/ficção_policial.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
-        <img src="./imagens/filmes-html/romance.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
-        <img src="./imagens/filmes-html/romance.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
+       <a href="./produtos.html"><img src="./imagens/filmes-html/em_alta.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png" width="19%" ></a> 
+       <a href="./produtos.html">  <img src="./imagens/filmes-html/comédia.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="19%" > </a> 
+        <a href="./produtos.html">  <img src="./imagens/filmes-html/drama.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="19%" > </a> 
+            <a href="./produtos.html"> <img src="./imagens/filmes-html/ficção_policial.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="19%" > </a> 
+                <a href="./produtos.html">  <img src="./imagens/filmes-html/romance.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="19%" > </a> 
+       
     </div>
 
     <div class="filmes">
-        <img src="./imagens/filmes-html/ação_aventura.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
-        <img src="./imagens/filmes-html/filme_musical.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
-        <img src="./imagens/filmes-html/suspense.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
-        <img src="./imagens/filmes-html/séries.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
-        <img src="./imagens/filmes-html/Terror.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png" width="16%" >
-        <img src="./imagens/filmes-html/romance.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="16%" >
+        <a href="./produtos.html">   <img src="./imagens/filmes-html/ação_aventura.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="19%" > </a> 
+            <a href="./produtos.html">    <img src="./imagens/filmes-html/filme_musical.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="19%" > </a> 
+                <a href="./produtos.html">   <img src="./imagens/filmes-html/suspense.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="19%" > </a> 
+                    <a href="./produtos.html">   <img src="./imagens/filmes-html/séries.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png"  width="19%" > </a> 
+                        <a href="./produtos.html">   <img src="./imagens/filmes-html/Terror.png" class="reveal-img" data-hover="./imagens/filmes-html/generico.png" width="19%" > </a> 
+        
     </div>
    
 
